--- a/Gaussian_Process.ipynb
+++ b/Gaussian_Process.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMedMr/MnJy8+sbP5Jobijn",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPG32PEY9PESo/7VYW9Bm7D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +49,26 @@
       "source": [
         "!git init Gaussian"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "q0-mHSPNdxGz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h1> Conditional Probability using Pyhton </h1>\n",
+        "\n",
+        "$$ P(A \\mid B) = \\frac{P(B \\mid A)\\, P(A)}{P(B)} $$\n"
+      ],
+      "metadata": {
+        "id": "bOG5RQoTdy5v"
+      }
     },
     {
       "cell_type": "code",
