--- a/Parameter_Tuning.ipynb
+++ b/Parameter_Tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWrCHlnaJ14eQ6qBvVz6iI",
+      "authorship_tag": "ABX9TyNTKxa2fHaNud/MKH5aoDON",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,46 +28,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JY9h09LhyGQp",
-        "outputId": "60a42268-3ca1-4841-c487-0d267113e5c4"
+        "outputId": "92ff40f7-06d5-4ab3-98e3-fde8fc1c42ba"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Initialized empty Git repository in /content/src/.git/\n"
+            "Reinitialized existing Git repository in /content/src/.git/\n"
           ]
         }
       ],
       "source": [
-        "!git init src"
+        "!git init "
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "%cd src"
+        "%cd .."
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nRhwwK67yOGm",
-        "outputId": "2429684f-d036-4fb1-d173-e7eb4e301c1f"
+        "outputId": "edf57f96-1ed0-4153-e288-3c91318a4aef"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/src\n"
+            "/content\n"
           ]
         }
       ]
@@ -118,14 +118,70 @@
     {
       "cell_type": "code",
       "source": [
-        "token = \"*****\"\n",
+        "token = \"***\"\n",
         "username = \"harshvardan-kv\""
       ],
       "metadata": {
         "id": "7Nne8r8Z0HsD"
       },
-      "execution_count": 14,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone -b hyperTuning https://{token}@github.com/{username}/DL"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xaES_LmYC8Ki",
+        "outputId": "dc1f1da8-7c81-4dab-8bb8-a4e00d88d8cf"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'DL'...\n",
+            "remote: Enumerating objects: 29, done.\u001b[K\n",
+            "remote: Counting objects: 100% (29/29), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (24/24), done.\u001b[K\n",
+            "remote: Total 29 (delta 6), reused 11 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (29/29), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://{token}@github.com/{username}/DL"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SBiVcJ3bBa2D",
+        "outputId": "6939bd8d-95ab-49d1-aaec-1e44dcb00ac7"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'DL'...\n",
+            "remote: Enumerating objects: 29, done.\u001b[K\n",
+            "remote: Counting objects: 100% (29/29), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (24/24), done.\u001b[K\n",
+            "remote: Total 29 (delta 6), reused 11 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (29/29), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -137,6 +193,52 @@
       },
       "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git checkout -b hyperTuning"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SpTFc2YcB2vU",
+        "outputId": "da247fa7-17f9-4b6d-a93b-488b4be6c4a4"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Switched to a new branch 'hyperTuning'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git checkout -b hyperTuning"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hHpVbljhCYSe",
+        "outputId": "48d5547d-b566-480e-b1f3-0a89a0e1090b"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Switched to a new branch 'hyperTuning'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -257,7 +359,7 @@
       "metadata": {
         "id": "hvI2Wf6Z0hKG"
       },
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -339,9 +441,99 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "  df = pd.read_csv(\"./DL/Data/train.csv\")\n",
+        "  X = df.drop(\"price_range\",axis=1).values\n",
+        "  Y = df['price_range'].values\n",
+        "\n",
+        "  classifier = ensemble.RandomForestClassifier(n_jobs = -1)\n",
+        "  parameters = {\n",
+        "      \"n_estimators\" :np.arange(100,1500,100),\n",
+        "      \"max_depth\": np.arange(1,15,2),\n",
+        "      \"criterion\" : [\"gini\",\"entropy\"]\n",
+        "      \n",
+        "  }\n",
+        "  model = model_selection.RandomizedSearchCV(\n",
+        "      estimator = classifier,\n",
+        "      param_distributions = parameters,\n",
+        "      n_iter=10,\n",
+        "      scoring = \"accuracy\",\n",
+        "      verbose = 10,\n",
+        "      n_jobs=-1,\n",
+        "      cv = 5\n",
+        "  )\n",
+        "  model.fit(X,Y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aWrDXgVP-Dof",
+        "outputId": "eb233b30-3256-4cd3-e8ed-2225b8c1123a"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model.best_score_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zj9Gy1ONDpAV",
+        "outputId": "0dd8728e-96cb-48f2-acf0-7aef2f498b1f"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.8855000000000001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model.best_estimator_.get_params())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8IlmzZUxEdPF",
+        "outputId": "aec9be96-99d7-400a-eefb-89b62b179579"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'entropy', 'max_depth': 9, 'max_features': 'auto', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 1400, 'n_jobs': -1, 'oob_score': False, 'random_state': None, 'verbose': 0, 'warm_start': False}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "aWrDXgVP-Dof"
+        "id": "YgGo67RhEfFU"
       },
       "execution_count": null,
       "outputs": []
